Removed display methods from classes, and added toTableData() serialization to.